# XFramelessWidget

./: CMakeLists.txt  CMakeSettings.json  README.md  captionitf.h  captionwidget.cpp  captionwidget.h  captionwidget.ui  sample.cpp  sample.h  scopeguard.h  winnativewindow.cpp  winnativewindow.h  xframelesswidget.cpp  xframelesswidget.h  xutil_linux.cpp  xutil_linux.h  xutil_macos.h  xutil_macos.mm
